# rtsp_player

./: CMakeLists.txt  README.md  config.h  main.cpp  rtsp.conf
gstwrap/: client.cpp  gstcallback.cpp  gstcallback.h  pipeline.cpp  pipeline.h
